--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "dom-to-image": "^2.6.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -45,7 +44,6 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/dom-to-image": "^2.6.3"
-  }
+  "devDependencies": {},
+  "homepage": "./"
 }
